@@ -37,7 +37,7 @@ name_max=Maximum domain name length to display,0,5
 show_features=Show server features on main page?,1,1-Yes,0-No
 show_quotas=Show disk usage on main page?,1,1-Yes,0-No
 show_mailsize=Show mailbox size in users list?,1,1-Yes,0-No
-show_sysinfo=Show system information on main page?,1,1-Yes,0-No,2-Only for master admin
+show_sysinfo=Show system information on main page?,1,1-Yes,0-No,2-Only for master admin,3-Only for master and resellers
 template_auto=Allow editing of options from template when creating server?,1,0-Yes,1-No
 domains_sort=Sort virtual servers by,1,user-Owner,dom-Domain name,owner-Description
 show_ugroup=Allow selection of different group for server admins?,1,1-Yes,0-No
