@@ -1688,9 +1688,9 @@ return &master_admin();
 sub can_view_sysinfo
 {
 return 0 if (!$virtualmin_pro);
-return $config{'show_sysinfo'} == 0 ? 0 :
-       $config{'show_sysinfo'} == 1 ? 1 :
-				      &master_admin();
+return $config{'show_sysinfo'} == 1 ||
+       $config{'show_sysinfo'} == 2 && &master_admin() ||
+       $config{'show_sysinfo'} == 3 && (&master_admin() || &reseller_admin());
 }
 
 # Returns 1 if the user can re-check the licence status
